Ya funciona la busqueda por filtros

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -28,6 +28,25 @@
         <button type="submit" class="save">Save Property</button>
     </form>
 
+    <form id="searchForm">
+        <label for="searchAddress">Address:</label>
+        <input type="text" id="searchAddress" placeholder="Search by address">
+
+        <label for="searchMinPrice">Min Price:</label>
+        <input type="number" id="searchMinPrice" placeholder="Min price">
+
+        <label for="searchMaxPrice">Max Price:</label>
+        <input type="number" id="searchMaxPrice" placeholder="Max price">
+
+        <label for="searchMinSize">Min Size:</label>
+        <input type="number" id="searchMinSize" placeholder="Min size">
+
+        <label for="searchMaxSize">Max Size:</label>
+        <input type="number" id="searchMaxSize" placeholder="Max size">
+
+        <button type="submit" class="save">Search</button>
+    </form>
+
     <div class="table-container">
         <h2>Properties List</h2>
         <table>
