--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Property Manager</title>
     <link rel="stylesheet" href="styles.css">
+    <script>
+        const isAuthenticated = localStorage.getItem("isAuthenticated");
+        if (!isAuthenticated) {
+            window.location.href = "login.html";
+        }
+    </script>
 </head>
 <body>
 
