--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
     <title>Property Manager</title>
     <link rel="stylesheet" href="styles.css">
     <script>
-        const isAuthenticated = localStorage.getItem("isAuthenticated");
+        const isAuthenticated = sessionStorage.getItem("isAuthenticated");
         if (!isAuthenticated) {
             window.location.href = "login.html";
         }
