--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Login y Registro</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="login-container">
-  <h2>Iniciar Sesión</h2>
+  <h2 id="formTitle">Iniciar Sesión</h2>
   <form id="loginForm">
     <div class="form-group">
       <label for="username">Usuario:</label>
@@ -20,6 +20,20 @@
     </div>
     <button type="submit">Iniciar Sesión</button>
   </form>
+
+  <form id="registerForm" style="display: none;">
+    <div class="form-group">
+      <label for="regUsername">Usuario:</label>
+      <input type="text" id="regUsername" name="regUsername" required>
+    </div>
+    <div class="form-group">
+      <label for="regPassword">Contraseña:</label>
+      <input type="password" id="regPassword" name="regPassword" required>
+    </div>
+    <button type="submit">Registrarse</button>
+  </form>
+
+  <p id="toggleForm"><a href="#" id="toggleLink">Regístrate aquí</a></p>
   <p id="message"></p>
 </div>
 <script src="loginScript.js"></script>
